# palm-conversion-tools

./: README
calendar-import/: .classpath  .project  README  build.xml  logging.properties  palm.proto
calendar-import/src/net/mtu/eggplant/google/: EventBeginComparator.java  GoogleImport.java  Palm.java
contact-export/: .cproject  .project  CMakeLists.txt  ContactsHeader.cpp  ContactsHeader.hpp  README  export-contacts.cpp  google-column-names.txt
palm-export/: .cproject  .project  CMakeLists.txt  README  dump-calendar-events.cpp  palm.proto
