CMAKE_MINIMUM_REQUIRED (VERSION 2.6) 
PROJECT (palm-export) 

FIND_PACKAGE(Protobuf REQUIRED)

set(CMAKE_CXX_FLAGS "-g -Wall -Werror")

INCLUDE_DIRECTORIES (${PROTOBUF_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS ${CMAKE_CURRENT_SOURCE_DIR}/palm.proto)

LINK_DIRECTORIES(/home/jpschewe/protobuf/lib)


ADD_EXECUTABLE (dump-calendar-events dump-calendar-events.cpp ${PROTO_SRCS} ${PROTO_HDRS} ) 

TARGET_LINK_LIBRARIES (dump-calendar-events pisock ${PROTOBUF_LIBRARY}) 
